# stellar-private-payments

./: .gitignore  Trunk.toml  vercel.json
.github/workflows/: coverage-pr.yml  deploy.yml
app/: admin.html  index.html  package.json
app/crates/prover/: Cargo.toml
app/css/: app.css
app/e2e/: fixtures.js
app/e2e/tests/: deposit-flow.spec.js  deposit-tab.spec.js
app/js/: stellar.js  ui.js
app/js/__tests__/: stroops.test.js
app/js/state/: asp-membership-store.js  db.js  notes-store.js  sync-controller.js
app/js/ui/: core.js  navigation.js  notes-table.js  sync-ui.js  templates.js
app/js/ui/transactions/: deposit.js  transact.js  transfer.js  withdraw.js
contracts/asp-membership/src/: lib.rs  test.rs
scripts/: deploy.sh  deployments.json  full-redeploy.sh  redeploy-asp-membership.sh  update-pool-asp-membership.sh
scripts/testdata/: policy_tx_2_2_vk_const.rs
