[package]
name = "prover"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
description = "Browser WASM module for ZK proof generation using Groth16"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Arkworks ZK proving
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { workspace = true }
ark-std = { workspace = true }

# Circuit utilities (core module only, no_std compatible)
circuits = { path = "../../../circuits", default-features = false }

# WASM bindings
console_error_panic_hook = { workspace = true }
crypto_secretbox = { version = "0.1.1", default-features = false, features = ["alloc", "salsa20"] }
serde = { workspace = true }
sha2 = { workspace = true }
wasm-bindgen = { workspace = true }
x25519-dalek = { version = "2.0", default-features = false, features = ["static_secrets"] }
# Poseidon2 hash
zkhash = { workspace = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { workspace = true }
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { workspace = true, features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = { workspace = true }

[lints]
workspace = true
